libktorrent (1.0.0-0r1) UNRELEASED; urgency=low

  * New upstream release.
  * Add a workaround for #581896 on Linux (patch
    debian_disable_ipv6_only.diff). The bug remains open on kFreeBSD.
  * License files are in upstream tarball now, remove the respective note from
    debian/copyright.
  * Add debian/README.source.

 -- Modestas Vainius <modax@debian.org>  Mon, 24 May 2010 15:02:23 +0300

libktorrent (1.0~rc1+dfsg.1-1) unstable; urgency=low

  * Initial release.

 -- Modestas Vainius <modax@debian.org>  Sat, 08 May 2010 21:49:44 +0300